# cryptotui

./: Cargo.toml  Makefile  README.md
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src/tui/: chart.rs  dashboard.rs  help.rs  mod.rs  picker.rs  theme.rs
src/ws/: binance.rs  mod.rs
tests/: ws_binance.rs
tests/fixtures/: binance_kline_event.json  binance_trade.json  binance_trade_buyer_maker.json
