[package]
name = "cryptotui"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Real-time crypto market dashboard for the terminal — streaming indicators over Binance WebSocket"
license = "MIT"
readme = "README.md"
repository = "https://github.com/richikchaudhuri/cryptotui"
keywords = ["crypto", "tui", "trading", "indicators", "websocket"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
anyhow = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "5"
dotenvy = "0.15"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
ratatui = "0.28"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
toml = "0.8"

[dev-dependencies]
approx = "0.5"

[lints.clippy]
panic = "warn"
todo = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
